externals/mtime/include/mtime_datetime.h

/**
 * @struct _datetime
 *
 * @brief struct _datetime contains a struct _date and a struct _time element. 
 */
struct _datetime
{
  struct _date date;	///< Date elements.
  struct _time time;	///< Time elements.
};
struct _datetime*
newDateTime(const char* datetime_string);
struct _datetime*
newRawDateTime(int64_t _year, int _month, int _day, int _hour, int _minute, int _second, int _ms);
struct _datetime*
constructAndCopyDateTime(struct _datetime* dt);
void
deallocateDateTime(struct _datetime* dt);
compare_return_val
compareDatetime(struct _datetime* dt1, struct _datetime* dt2);
struct _datetime*
replaceDatetime(struct _datetime* dtsrc, struct _datetime* dtdest);
char*
datetimeToString(struct _datetime* dt, char* toStr);
int
getNoOfDaysInMonthDateTime(struct _datetime* dt);
int
getNoOfDaysInYearDateTime(struct _datetime* dt);
int
getDayOfYearFromDateTime(struct _datetime* currentdt);
struct _julianday*
getJulianDayFromDateTime(struct _datetime* dt, struct _julianday* jd);