externals/mtime/src/libmtime.f90

    integer(c_int) :: hour
    integer(c_int) :: minute
    integer(c_int) :: second
    integer(c_int) :: ms
  end type time
  !
  interface
    !
    function my_newtime(string) result(c_pointer) bind(c, name='newTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_char, c_ptr
#else
      import :: c_char, c_ptr
#endif
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: string
    end function my_newtime
    !
    subroutine my_deallocatetime(t) bind(c,name='deallocateTime') 
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: t
    end subroutine my_deallocatetime
    !
    function my_timetostring(my_time, string) result(string_ptr) bind(c, name='timeToString') 
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr, c_char
#else
      import :: c_ptr, c_char
#endif
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_time
      character(c_char), dimension(*) :: string
    end function my_timetostring
    !
  end interface
  !
contains
  !
  function newTime(string) result(ret_time)
    type(time), pointer :: ret_time
    character(len=*), intent(in) :: string
    type(c_ptr) :: c_pointer
    c_pointer = my_newtime(trim(string)//c_null_char)
    call c_f_pointer(c_pointer, ret_time)
  end function newTime
  !
  subroutine deallocateTime(my_time)
    type(time), pointer :: my_time
    call my_deallocatetime(c_loc(my_time))
    my_time => null()
  end subroutine deallocateTime
  !
  subroutine timeToString(my_time, string)
    type(time), pointer :: my_time
    character(len=max_time_str_len) :: string
    type(c_ptr) :: dummy_ptr
    integer :: i
    dummy_ptr = my_timetostring(c_loc(my_time), string)
    char_loop: do i = 1 , len(string)
      if (string(i:i) == c_null_char) exit char_loop
    end do char_loop
    string(i:len(string)) = ' '
  end subroutine timeToString
  !
end module mtime_time
!>
!! @brief DateTime and some operations supported on DateTime.
!!
!! @details
!!
!! @author  Luis Kornblueh, Max Planck Institute for Meteorology
!! @author  Rahul Sinha, Max Planck Institute for Meteorology
!!
!___________________________________________________________________________________________________________
module mtime_datetime
  !
  use, intrinsic :: iso_c_binding, only: c_int, c_int64_t, c_char, c_ptr, c_null_char, c_loc, c_f_pointer
  !
  use mtime_julianday
  use mtime_date
  use mtime_time
  !
  implicit none
  !
  private
  !
  public :: max_datetime_str_len
  public :: datetime
  public :: newDatetime
  public :: deallocateDatetime
  public :: datetimeToString
  public :: getJulianDayFromDatetime
  !
  public :: assignment(=)
  public :: operator(>)
  public :: operator(<)
  public :: operator(<=)
  public :: operator(>=)
  public :: operator(==)
  public :: operator(/=)
  !
  !> provides a string length for toString 
  integer, parameter :: max_datetime_str_len = 32
  !
  type, bind(c) :: datetime
    type(date) :: date
    type(time) :: time
  end type datetime
  !
  interface newDatetime
    module procedure newdatetimefromstring
    module procedure newdatetimefromraw
    module procedure newdatetimefromconstructandcopy
  end interface newDatetime
  !
  interface assignment (=)
    module procedure replacedatetime
  end interface assignment (=)
  !
  interface operator (>)
    module procedure datetime_gt
  end interface operator (>)
  !
  interface operator (<)
    module procedure datetime_lt
  end interface operator (<)
  !
  interface operator (<=)
    module procedure datetime_lt_or_eq
  end interface operator (<=)
  !
  interface operator (>=)
    module procedure datetime_gt_or_eq
  end interface operator (>=)
  !
  interface operator (==)
    module procedure datetime_eq
  end interface operator (==)
  !
  interface operator (/=)
    module procedure datetime_ne
  end interface operator (/=)
  !
  interface
    !
    function my_newdatetime(string) result(c_pointer) bind(c, name='newDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_char, c_ptr
#else
      import :: c_char, c_ptr
#endif
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: string
    end function my_newdatetime
    !
    function my_newrawdatetime(year, month, day, hour, minute, second, ms) result(c_pointer) bind(c, name='newRawDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int64_t, c_int, c_ptr
#else
      import :: c_int64_t, c_int, c_ptr
#endif
      type(c_ptr) :: c_pointer
      integer(c_int64_t) :: year
      integer(c_int) :: month, day, hour, minute, second, ms
    end function my_newrawdatetime
    !
    function my_constructandcopydatetime(dt) result(c_pointer) bind(c,name='constructAndCopyDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr
#else
      import :: c_ptr
#endif
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: dt
    end function my_constructandcopydatetime
    !
    subroutine my_deallocatedatetime(dt) bind(c,name='deallocateDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr  
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: dt
    end subroutine my_deallocatedatetime
    !
    function my_datetimetostring(my_time, string) result(string_ptr) bind(c, name='datetimeToString')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr, c_char
#else
      import :: c_ptr, c_char
#endif
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_time
      character(c_char), dimension(*) :: string
    end function my_datetimetostring
    !
    function my_replacedatetime(src, dest) result(ret_dest) bind(c, name='replaceDatetime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr
#else
      import :: c_ptr
#endif
      type(c_ptr) :: ret_dest
      type(c_ptr), value :: src
      type(c_ptr), value :: dest
    end function my_replacedatetime
    !
    function my_comparedatetime(op1, op2) result(ret) bind(c, name='compareDatetime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr, c_int  
#else
      import :: c_ptr, c_int
#endif
      integer(c_int) :: ret
      type(c_ptr), value :: op1
      type(c_ptr), value :: op2
    end function my_comparedatetime
    !
    function my_getnoofdaysinmonthdatetime(dt) bind(c, name='getNoOfDaysInMonthDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int, c_ptr  
#else
      import :: c_int, c_ptr
#endif
      integer(c_int) :: my_getnoofdaysinmonthdatetime
      type(c_ptr), value :: dt
    end function my_getnoofdaysinmonthdatetime
    !
    function my_getnoofdaysinyeardatetime(dt) bind(c, name='getNoOfDaysInYearDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int, c_ptr  
#else
      import :: c_int, c_ptr
#endif
      integer(c_int) :: my_getnoofdaysinyeardatetime
      type(c_ptr), value :: dt
    end function my_getnoofdaysinyeardatetime
    !
    function my_getdayofyearfromdatetime(dt) bind(c, name='getDayOfYearFromDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int, c_ptr  
#else
      import :: c_int, c_ptr
#endif
      integer(c_int) :: my_getdayofyearfromdatetime
      type(c_ptr), value :: dt
    end function my_getdayofyearfromdatetime
    !
    function my_getjuliandayfromdatetime(dt, jd) bind(c, name='getJulianDayFromDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_ptr
#else
      import :: c_ptr
#endif
      type(c_ptr) :: my_getjuliandayfromdatetime
      type(c_ptr), value :: dt
      type(c_ptr), value :: jd
    end function my_getjuliandayfromdatetime
    !
  end interface
  !
contains
  !
  function newdatetimefromstring(string) result(ret_datetime)
    type(datetime), pointer :: ret_datetime
    character(len=*), intent(in) :: string
    type(c_ptr) :: c_pointer
    c_pointer = my_newdatetime(trim(string)//c_null_char)
    call c_f_pointer(c_pointer, ret_datetime)
  end function newdatetimefromstring
  !
  function newdatetimefromraw(year, month, day, hour, minute, second, ms) result(ret_datetime)
    type(datetime), pointer :: ret_datetime
    integer(c_int64_t), intent(in) :: year
    integer(c_int), intent(in) :: month
    integer(c_int), intent(in) :: day
    integer(c_int), intent(in) :: hour
    integer(c_int), intent(in) :: minute
    integer(c_int), intent(in) :: second
    integer(c_int), intent(in) :: ms
    type(c_ptr) :: c_pointer
    c_pointer = my_newrawdatetime(year, month, day, hour, minute, second, ms)
    call c_f_pointer(c_pointer, ret_datetime)
  end function newdatetimefromraw
  !
  function newdatetimefromconstructandcopy(src) result(dest)
    type(datetime), pointer :: dest
    type(datetime), pointer :: src
    type(c_ptr) :: c_pointer
    c_pointer = my_constructandcopydatetime(c_loc(src))
    call c_f_pointer(c_pointer, dest)
  end function newdatetimefromconstructandcopy
  !
  subroutine deallocateDatetime(my_datetime)
    type(datetime), pointer :: my_datetime
    call my_deallocatedatetime(c_loc(my_datetime))
    nullify(my_datetime)
  end subroutine deallocateDatetime
  !
  subroutine datetimeToString(my_datetime, string)
    type(datetime), pointer :: my_datetime
    character(len=max_datetime_str_len) :: string
    type(c_ptr) :: dummy_ptr
    integer :: i
    dummy_ptr = my_datetimetostring(c_loc(my_datetime), string)
    char_loop: do i = 1 , len(string)
      if (string(i:i) == c_null_char) exit char_loop
    end do char_loop
    string(i:len(string)) = ' '
  end subroutine datetimeToString
  !
  subroutine replacedatetime(dest, src)
    type(datetime), target, intent(inout) :: dest
    type(datetime), target, intent(in) :: src
    type(c_ptr) :: dummy_ptr
    dummy_ptr = my_replacedatetime(c_loc(src), c_loc(dest))
  end subroutine replacedatetime
  !
  function datetime_gt(op1, op2) result(gt)
    logical :: gt
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret > 0) then
      gt = .true.
    else
      gt = .false.
    endif
  end function datetime_gt
  !
  function datetime_lt(op1, op2) result(lt)
    logical :: lt
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret < 0) then
      lt = .true.
    else
      lt = .false.
    endif
  end function datetime_lt
  !
  function datetime_lt_or_eq(op1, op2) result(lt_or_eq)
    logical :: lt_or_eq
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret <= 0) then
      lt_or_eq = .true.
    else
      lt_or_eq = .false.
    endif
  end function datetime_lt_or_eq
  !
  function datetime_gt_or_eq(op1, op2) result(gt_or_eq)
    logical :: gt_or_eq
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret >= 0) then
      gt_or_eq = .true.
    else
      gt_or_eq = .false.
    endif
  end function datetime_gt_or_eq
  !
  function datetime_eq(op1, op2) result(eq)
    logical :: eq
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret == 0) then
      eq = .true.
    else
      eq = .false.
    endif
  end function datetime_eq
  !
  function datetime_ne(op1, op2) result(ne)
    logical :: ne
    type(datetime), target, intent(in) :: op1
    type(datetime), target, intent(in) :: op2
    integer(c_int) :: ret
    ret = my_comparedatetime(c_loc(op1), c_loc(op2))
    if (ret /= 0) then
      ne = .true.
    else
      ne = .false.
    endif
  end function datetime_ne
  !
